fixed title not being visible in nav-tabs header

--- a/themes/bootstrap/dark/_variables.scss
+++ b/themes/bootstrap/dark/_variables.scss
@@ -1,7 +1,10 @@
+$gray-600: #6c757d;
+$gray-100: #f8f9fa;
+$jumbotron-bg: gray-600;
+$nav-tabs-link-active-color: $gray-100;
 $gray-800: #343a40;
 $secondary: $gray-800;
 $primary: rgb(0, 0, 0);
-$gray-100: #f8f9fa;
 $body-color: $gray-100;
 $gray-700: #495057;
 $body-bg: $gray-700;
@@ -15,7 +18,6 @@ $red: #a41414;
 $badge-padding-y: .2em;
 $list-group-item-padding-x: 0.1rem;
 $list-group-item-padding-y: .1rem;
-$gray-600: #6c757d;
 $list-group-bg: $gray-600;
 $gray-500: #adb5bd;
 $list-group-hover-bg: $gray-500;
